--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./main.css">
-  <title>Happy Birthday</title>
+  <title>Happy Birthday Lunch</title>
 </head>
 <body>
   <div class="startForm">
@@ -30,8 +30,9 @@
       <input type="checkbox" id="mess">
       <div class="content">
         <div class="mainContent"></div>
-        <a style="all: unset;" href="./gift.html">
-          <div class="img1"><img class="img" src="" alt=""></div></a>
+        <!-- <a style="all: unset;" href="./gift.html"> -->
+          <div class="img1"><img class="img" src="" alt=""></div>
+        <!-- </a> -->
       </div>
       <label class="designBox" for="mess"></label>
     </div>
